// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component Should input a new task to do 1`] = `
<div>
  <header
    class="Header__HeaderContainer-sc-r2hdum-0 kWBXF"
  >
    <h1
      class="Header__Title-sc-r2hdum-1 iMWokX"
    >
      TODO list
    </h1>
    <div
      class="Header__ContainerInput-sc-r2hdum-2 gmxExl"
    >
      <input
        aria-label="Add your task"
        class="Header__StyledInput-sc-r2hdum-3 cPEfyr"
        placeholder="Add your task"
        role="input"
        type="text"
        value=""
      />
      <button
        class="Header__SubmitButton-sc-r2hdum-4 gmvazl"
        role="add-task-button"
      >
        Done
      </button>
    </div>
  </header>
</div>
`;

exports[`Header Component Should not set a new task to do when text input is empty 1`] = `
<div>
  <header
    class="Header__HeaderContainer-sc-r2hdum-0 kWBXF"
  >
    <h1
      class="Header__Title-sc-r2hdum-1 iMWokX"
    >
      TODO list
    </h1>
    <div
      class="Header__ContainerInput-sc-r2hdum-2 gmxExl"
    >
      <input
        aria-label="Add your task"
        class="Header__StyledInput-sc-r2hdum-3 cPEfyr"
        placeholder="Add your task"
        role="input"
        type="text"
        value=""
      />
      <button
        class="Header__SubmitButton-sc-r2hdum-4 gmvazl"
        role="add-task-button"
      >
        Done
      </button>
    </div>
  </header>
</div>
`;

exports[`Header Component Should set a new task to do in state manager 1`] = `
<div>
  <header
    class="Header__HeaderContainer-sc-r2hdum-0 kWBXF"
  >
    <h1
      class="Header__Title-sc-r2hdum-1 iMWokX"
    >
      TODO list
    </h1>
    <div
      class="Header__ContainerInput-sc-r2hdum-2 gmxExl"
    >
      <input
        aria-label="Add your task"
        class="Header__StyledInput-sc-r2hdum-3 cPEfyr"
        placeholder="Add your task"
        role="input"
        type="text"
        value="task added"
      />
      <button
        class="Header__SubmitButton-sc-r2hdum-4 gmvazl"
        role="add-task-button"
      >
        Done
      </button>
    </div>
  </header>
</div>
`;
